<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/drill_chart_adView"
    android:divider="@drawable/horizontal_separator"
    android:orientation="vertical"
    android:showDividers="middle|beginning|end">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_separator"
        android:orientation="horizontal"
        android:showDividers="middle">


        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
            android:id="@+id/drill_all_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            android:textSize="16sp" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
            android:id="@+id/drill_wiregauge_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number"
            android:textSize="16sp" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
            android:id="@+id/drill_letter_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/abc"
            android:textSize="16sp" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
            android:id="@+id/drill_fraction_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fraction_button"
            android:textSize="16sp" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
            android:id="@+id/drill_metric_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/metric_button"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drill_chart_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_separator"
        android:orientation="horizontal"
        android:showDividers="middle">


        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/type_header"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/wiregauge" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/standard_header"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/standard" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/metric_header"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/metric" />
    </LinearLayout>

    <GridView
        android:id="@+id/drill_chart_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:clickable="false"
        android:fastScrollEnabled="true"
        android:horizontalSpacing="1dp"
        android:numColumns="3"
        android:verticalSpacing="1dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/drill_chart_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6986976933268044/5924552212" />
</LinearLayout>