<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_heading"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_action_logo" />

    <LinearLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999999"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/geometry_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:contentDescription="@string/geo_image" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ok_button"
        android:scaleType="fitXY"
        android:src="@drawable/ic_check" />

</LinearLayout>