<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/feeds_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/feeds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/feed_answer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
                android:id="@+id/feed_answer"
                style="@style/AnswerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
                android:id="@+id/feed_answer_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:textColor="@color/TextColor"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/feed_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoRadioButton
                android:id="@+id/feeds_standard_radio"
                style="@style/radioButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/standard" />

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoRadioButton
                android:id="@+id/feeds_metric_radio"
                style="@style/radioButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/feed_speed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
                android:id="@+id/feed_speed"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:text="@string/speedView" />

            <EditText
                android:id="@+id/feed_speed_input"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="2"
                android:hint="@string/rpm"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_per_tooth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
                android:id="@+id/feed_per_tooth_view"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:text="@string/feedPerToothView" />


            <EditText
                android:id="@+id/feed_per_tooth_input"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/in"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_teeth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
                android:id="@+id/number_teeth_view"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:text="@string/numberTeethView" />

            <EditText
                android:id="@+id/number_teeth_input"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/feed_calc"
            style="@style/calc_buttons"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/calc_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_calc"
            android:text="@string/calculate" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/feeds_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6986976933268044/5924552212" />
    </LinearLayout>
</LinearLayout>