<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/speeds_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">
    <LinearLayout
        android:id="@+id/speed_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/speed_answer"
            style="@style/AnswerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"/>

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/speed_answer_type"
            style="@style/AnswerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpm" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/speed_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_answer_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoRadioButton
            android:id="@+id/speeds_standard_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/standard" />

        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoRadioButton
            android:id="@+id/speeds_metric_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/speed_surface_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_radio_group"
        android:orientation="horizontal"
        android:layout_alignLeft="@id/speed_answer_layout"
        android:layout_alignStart="@id/speed_answer_layout">


        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/surface_view"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surface_standard"/>
        <EditText
            android:id="@+id/surfaceInput"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diameter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_surface_layout"
        android:layout_alignLeft="@id/speed_answer_layout"
        android:layout_alignStart="@id/speed_answer_layout"
        android:orientation="horizontal">


        <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoTextView
            android:id="@+id/diameter_text"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/diameter" />


        <EditText
            android:id="@+id/diameterInput"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/in"/>
    </LinearLayout>

    <com.jwilliams.machinistmate.app.ExtendedClasses.RobotoButton
        android:id="@+id/speed_calc"
        style="@style/calc_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:text="@string/calculate"
        android:layout_below="@+id/diameter_view" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/speeds_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-6986976933268044/5924552212"
        ads:adSize="BANNER"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

</LinearLayout>